
add_subdirectory(classes_basics)
add_subdirectory(iterators)
add_subdirectory(containers)
add_subdirectory(time)
add_subdirectory(exceptions)
add_subdirectory(stl)
add_subdirectory(strings)
add_subdirectory(atomics)
add_subdirectory(io)
add_subdirectory(filesystem)
add_subdirectory(ranges)
add_subdirectory(enums)

